# flutter_run_android_binary

./: README.md  pubspec.yaml
android/app/: build.gradle
http_server/: CMakeLists.txt  README.md  main.cpp
lib/: main.dart
